--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</details>
 
 					<details>
-						<summary>Saepe aspernatur odit dignissimos, quas consequuntur unde.</summary>
+						<summary>Saepe aspernatur odit dignissimos, quas unde.</summary>
 						<p>Iure ullam recusandae quae nemo illum sequi esse maiores nisi commodi asperiores laborum hic ex reiciendis, deserunt illo vel, aspernatur at ipsam. Quo minus illum eaque, nesciunt, cumque velit eveniet.</p>
 					</details>
 
