--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="content">
-		<header class="main-header">
+		<header>
 			<div class="head-left">
 				<div>
 					<h1>Product name</h1>
