--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Lesson #2</title>
 	<!-- <link href="img/favicon.ico" rel="icon" type="image/x-icon"> -->
 	<link rel="stylesheet" type="text/css" href="styles/style.min.css">
