--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<div class="form-wrap">
 					<form action="#">
 						<label for="firstName">Your first name</label>
-						<input class="form-field" type="text" id="firstName" placeholder="Ivan" autofocus required>
+						<input class="form-field" type="text" id="firstName" placeholder="Ivan" required>
 						<label for="lastName">Your last name</label>
 						<input class="form-field" type="text" id="lastName" placeholder="Ivanov" required>
 						<label for="email">Your email</label>
